validate card payment form

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -1364,6 +1364,8 @@ footer
         color #d96263
 
 /**************** Buttons ***************/
+.panel-title > input[type='radio']
+  cursor pointer
 .btn-paypal
   border-radius 0 !important
   color #fff
