--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -131,6 +131,9 @@ body
   vertical-align middle
 
 /************** main css ******************/
+.label-status
+  .col-md-1
+    margin-right 20px
 .bg-war
   color #FF9800
   background-color #faefde
