--- a/app/css/main.css
+++ b/app/css/main.css
@@ -135,6 +135,9 @@ body {
   margin-left: 2px;
   vertical-align: middle;
 }
+.label-status .col-md-1 {
+  margin-right: 20px;
+}
 .bg-war {
   color: #ff9800;
   background-color: #faefde;
