--- a/app/templates/shop/shipping-address.html
+++ b/app/templates/shop/shipping-address.html
@@ -1,7 +1,7 @@
 <div class="cart-form">
     <form name="paymentForm" novalidate>
         <div class="row">
-            <div class="col-sm-9 col-md-12 detail-payment-shop" style="background: #eee;">
+            <div class="col-sm-9 col-md-12 detail-payment-shop">
                 <div class="col-xs-12 col-sm-6 col-md-12">
                     <div class="form-item">
                         <label for="address1">Selecciona una direccion de envio</label>
