--- a/app/templates/shop/shopcart.html
+++ b/app/templates/shop/shopcart.html
@@ -8,7 +8,7 @@
             <a class="btn btn-outline-red" ui-sref="products">Ver productos</a>
         </div>
         <div class="row" ng-if="ShopCart.items.length>0">
-            <div class="col-sm-3 col-md-3 pull-right">
+            <div class="col-sm-3 col-md-2 pull-right text-right">
                 <div class="clear-cart">
                     <button class="btn btn-outline-red" ng-click="ShopCart.clearCart()">Vaciar Carrito</button>
                 </div>
