--- a/app/templates/auth/account-profile.html
+++ b/app/templates/auth/account-profile.html
@@ -5,14 +5,14 @@
         </div>
         <div class="col-md-9">
             <section id="content-contact">
-                <div class="col-md-offset-1 contact-section">
+                <div class="contact-section">
                     <div class="col-md-12 title-post">
                         <h3 class="info2"><i class="ion-person"></i> Información personal</h3>
                         <hr/>
                     </div>
                     <div class="col-md-12">
                         <form class="padding form-horizontal" ng-submit="Profile.submitForm()">
-                            <div class="col-xs-12 col-md-6">
+                            <div class="col-xs-12 col-sm-6">
                                 <div class="form-item">
                                     <label for="name">Nombre Completo</label>
                                     <input ng-model="Profile.profileData.businessName" type="text"
@@ -21,7 +21,7 @@
                                            required>
                                 </div>
                             </div>
-                            <div class="col-xs-12 col-md-6">
+                            <div class="col-xs-12 col-sm-6">
                                 <div class="form-item">
                                     <label for="user">Usuario</label>
                                     <input ng-model="Profile.profileData.username" type="text" class="form-control"
@@ -30,7 +30,7 @@
                                            required>
                                 </div>
                             </div>
-                            <div class="col-xs-12 col-md-6">
+                            <div class="col-xs-12 col-sm-6">
                                 <div class="form-item">
                                     <label for="email">Correo electrónico</label>
 
@@ -39,7 +39,7 @@
                                            placeholder="Correo electrónico" required>
                                 </div>
                             </div>
-                            <div class="col-xs-12 col-md-6">
+                            <div class="col-xs-12 col-sm-6">
                                 <div class="form-item">
                                     <label for="state">Estado</label>
                                     <ui-select on-select="Profile.getCitiesByState($model)"
@@ -57,7 +57,7 @@
                                     </ui-select>
                                 </div>
                             </div>
-                            <div class="col-xs-12 col-md-6">
+                            <div class="col-xs-12 col-sm-6">
                                 <div class="form-item">
                                     <label for="city">Ciudad</label>
                                     <ui-select ng-model="Profile.profileData.city" id="city" name="cities"
@@ -73,7 +73,7 @@
                                     </ui-select>
                                 </div>
                             </div>
-                            <div class="col-xs-12 col-md-6">
+                            <div class="col-xs-12 col-sm-6">
                                 <div class="form-item">
                                     <label for="phone">Teléfono</label>
                                     <input ng-model="Profile.profileData.phone" type="text" class="form-control"
@@ -82,7 +82,7 @@
                                            placeholder="Teléfono" required>
                                 </div>
                             </div>
-                            <div class="col-xs-12 col-md-6">
+                            <div class="col-xs-12 col-sm-6">
                                 <div class="form-item">
                                     <label for="mobile">Celular</label>
                                     <input ng-model="Profile.profileData.mobile" type="text" class="form-control"
@@ -92,10 +92,10 @@
                                 </div>
                             </div>
 
-                            <div class="col-md-12 text-center" style="padding-top: 30px;">
+                            <div class="col-sm-6 text-right" style="padding-top: 30px;">
                                 <button type="submit" class="btn btn-outline-red"
                                         ng-disabled="Profile.busy">
-                                    <i class="fa fa-user"></i> Actualizar <span ng-if="Profile.busy"><i
+                                    Guardar cambios <span ng-if="Profile.busy"><i
                                         class="fa fa-spinner fa-spin"></i></span>
                                 </button>
                             </div>
