--- a/app/templates/auth/addresses.html
+++ b/app/templates/auth/addresses.html
@@ -10,12 +10,8 @@
                 </div>
             </div>
             <hr>
-            <div class="row">
-                <div class="col-xs-6 col-md-4">
-                    <button title="Agregar nueva dirección" ui-sref="address-add" class="btn add-button btn-xs"><i class="ion-plus-circled"></i>
-                    Agregar dirección</button>
-                </div>
-                <div class="col-xs-10 col-sm-6 col-md-4 pull-right search-ca">
+            <div class="row search-bar">
+                <div class="col-xs-10 col-sm-6">
                     <form name="Address.searchForm" ng-submit="Address.globalSearch()" class="ca-form">
                         <div class="input-group">
                             <input type="text" class="form-control" placeholder="Buscar" name="searchTerm"
@@ -26,6 +22,10 @@
                     </button></span>
                         </div>
                     </form>
+                </div>
+                <div class="col-xs-6 col-sm-6 text-right">
+                    <button title="Agregar nueva dirección" ui-sref="address-add" class="btn btn-gray-clear-sm btn-xs"><i class="ion-ios-plus-empty"></i>
+                    Agregar dirección</button>
                 </div>
             </div>
             <div class="table-responsive" loading-container="Address.tableParams.settings().$loading">
@@ -40,10 +40,10 @@
                         <td data-title="'Código Postal'" sortable="'zip'">{{ address.zip }}</td>
                         <td data-title="'Teléfono'" sortable="'phone'">{{ address.phone }}</td>
                         <td data-title="'Acciones'">
-                            <button title="Editar dirección" class="btn btn-primary btn-xs" ui-sref="address-update({id: address.id})" data-title="Edit">
-                                <span class="glyphicon glyphicon-pencil"></span></button>
-                            <button title="Eliminar dirección" class="btn btn-danger btn-xs" ng-click="Address.deleteAddress(address.id)">
-                                <span class="glyphicon glyphicon-trash"></span></button></td>
+                            <button title="Editar dirección" class="btn btn-info btn-xs indicators" ui-sref="address-update({id: address.id})" data-title="Edit">
+                                <span class="ion-ios-compose"></span></button>
+                            <button title="Eliminar dirección" class="btn btn-danger btn-xs indicators" ng-click="Address.deleteAddress(address.id)">
+                                <span class="ion-ios-trash"></span></button></td>
                     </tr>
                     </tbody>
                     <tfooter>
