--- a/app/templates/auth/dashboard.html
+++ b/app/templates/auth/dashboard.html
@@ -94,7 +94,7 @@
                                 <td data-title="'Acciones'">
                                     <button title="Ver detalle de la compra" class="btn btn-primary btn-xs"
                                             ui-sref="purchase-detail({id: sale.id})" data-title="Edit">
-                                        <span class="glyphicon glyphicon-eye-open"></span></button>
+                                        <span class="ion-ios-eye"></span></button>
                             </tr>
                             </tbody>
                             <tfooter>
