--- a/app/templates/auth/dashboard.html
+++ b/app/templates/auth/dashboard.html
@@ -8,7 +8,7 @@
             <div class="title-section">
                 <h3 class="info2 pull-left"><i class="ion-person"></i> Mi cuenta: {{user.username}}</h3>
                 <div class="go-to-shop pull-right">
-                    <a href="#" class="btn-gray-clear"> Ir a comprar!</a>
+                    <a href="products" class="btn-gray-clear"> Ir a comprar!</a>
                 </div>
                 <hr class="clearfix">
                 <div class="container-fluid dash-footer">
