--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,109 +1,94 @@
-<section id="content-contact">
+<section id="content-area">
     <div class="container">
-        <div class="form-section">
-            <div class="container">
-                <div class="col-md-6 contact-section">
-                    <div class="title-post">
-                        <h2 class="title text-center">Iniciar sesión</h2>
-                    </div>
-                    <div class="col-md-10">
-                        <form class="padding" name="loginForm" novalidate ng-submit="Access.login()">
-                            <div class="form-group" ng-class="{ 'has-error': loginForm.username.$touched && loginForm.username.$invalid }">
-                                <input type="text" ng-model="Access.formDataLogin.username" class="form-control" id="user" name="username"
-                                       placeholder="Nombre de usuario" required>
-                                <div class="help-block" ng-messages="loginForm.username.$error" ng-if="loginForm.username.$touched">
-                                    <div ng-message="required">Ingrese el nombre de usuario</div>
-                                </div>
+        <div class="col-sm-6 col-sm-offset-3">
+            <uib-tabset active="activeJustified" justified="true">
+                <uib-tab index="0" heading="Iniciar sesión">
+                    <form name="loginForm" novalidate ng-submit="Access.login()">
+                        <div class="form-group" ng-class="{ 'has-error': loginForm.username.$touched && loginForm.username.$invalid }">
+                            <input type="text" ng-model="Access.formDataLogin.username" class="form-control" id="user" name="username"
+                                    placeholder="Nombre de usuario" required>
+                            <div class="help-block" ng-messages="loginForm.username.$error" ng-if="loginForm.username.$touched">
+                                <div ng-message="required">Ingrese el nombre de usuario</div>
                             </div>
-                            <div class="form-group" ng-class="{ 'has-error': loginForm.password.$touched && loginForm.password.$invalid }">
-                                <input type="password" ng-model="Access.formDataLogin.password" class="form-control" id="password" name="password"
-                                       placeholder="Contraseña" required>
-                                <div class="help-block" ng-messages="loginForm.password.$error" ng-if="loginForm.password.$touched">
-                                    <div ng-message="required">Ingrese la contraseña.</div>
-                                </div>
+                        </div>
+                        <div class="form-group" ng-class="{ 'has-error': loginForm.password.$touched && loginForm.password.$invalid }">
+                            <input type="password" ng-model="Access.formDataLogin.password" class="form-control" id="password" name="password"
+                                    placeholder="Contraseña" required>
+                            <div class="help-block" ng-messages="loginForm.password.$error" ng-if="loginForm.password.$touched">
+                                <div ng-message="required">Ingrese la contraseña.</div>
                             </div>
-                            <p class="text-center forgot-pass"><a href="">¿Olvidaste la contaseña?</a></p>
+                        </div>
+                        <p class="text-center forgot-pass"><a href="">¿Olvidaste la contaseña?</a></p>
 
-                            <div class="text-center" style="padding-top: 40px;">
-                                <button type="submit" class="btn btn-block btn-login-ca" ng-disabled="loginForm.$invalid">
-                                     Iniciar sesión <span ng-if="Contact.busy"><i
-                                        class="fa fa-spinner fa-spin"></i></span>
-                                </button>
+                        <div class="text-center" style="padding-top: 40px;">
+                            <button type="submit" class="btn btn-block btn-login-ca" ng-disabled="loginForm.$invalid">
+                                    Iniciar sesión <span ng-if="Contact.busy"><i
+                                    class="fa fa-spinner fa-spin"></i></span>
+                            </button>
+                        </div>
+                    </form>
+                </uib-tab>
+                <uib-tab index="1" heading="Registrarme">
+                    <form class="padding" name="registerForm" ng-submit="Access.createAccount()" novalidate>
+                        <div class="form-group" ng-class="{ 'has-error': registerForm.businessName.$touched && registerForm.businessName.$invalid }">
+                            <input type="text" ng-model="Access.formData.businessName" class="form-control" id="businessName" name="businessName"
+                                    placeholder="Nombre" required>
+                            <div class="help-block" ng-messages="registerForm.businessName.$error" ng-if="registerForm.businessName.$touched">
+                                <div ng-message="required">El campo nombre es requerido</div>
                             </div>
-                        </form>
-                    </div>
-                </div>
-                <div class="col-md-6 contact-section">
-                    <div class="title-post">
-                        <h2 class="title text-center">Registro</h2>
-                    </div>
-
-                    <div class="col-md-offset-2 col-md-10">
-                        <form class="padding" name="registerForm" ng-submit="Access.createAccount()" novalidate>
-                            <div class="form-group" ng-class="{ 'has-error': registerForm.businessName.$touched && registerForm.businessName.$invalid }">
-                                <input type="text" ng-model="Access.formData.businessName" class="form-control" id="businessName" name="businessName"
-                                       placeholder="Nombre" required>
-                                <div class="help-block" ng-messages="registerForm.businessName.$error" ng-if="registerForm.businessName.$touched">
-                                    <div ng-message="required">El campo nombre es requerido</div>
-                                </div>
+                        </div>
+                        <div class="form-group" ng-class="{ 'has-error': registerForm.username.$touched && registerForm.username.$invalid }">
+                            <input type="text" ng-minlength="5" ng-maxlength="10" ng-model="Access.formData.username" class="form-control" id="username" name="username"
+                                    placeholder="Usuario" required>
+                            <div class="help-block" ng-messages="registerForm.username.$error" ng-if="registerForm.username.$touched">
+                                <div ng-message="required">Este campo es requerido.</div>
+                                <div ng-message="minlength">Mínimo 6 caracteres.</div>
+                                <div ng-message="maxlength">Máximo 15 caracteres.</div>
                             </div>
-                            <div class="form-group" ng-class="{ 'has-error': registerForm.username.$touched && registerForm.username.$invalid }">
-                                <input type="text" ng-minlength="5" ng-maxlength="10" ng-model="Access.formData.username" class="form-control" id="username" name="username"
-                                       placeholder="Usuario" required>
-                                <div class="help-block" ng-messages="registerForm.username.$error" ng-if="registerForm.username.$touched">
-                                    <div ng-message="required">Este campo es requerido.</div>
-                                    <div ng-message="minlength">Mínimo 6 caracteres.</div>
-                                    <div ng-message="maxlength">Máximo 15 caracteres.</div>
-                                </div>
+                        </div>
+                        <div class="form-group" ng-class="{ 'has-error': registerForm.email.$touched && registerForm.email.$invalid }">
+                            <input type="email" ng-model="Access.formData.email" class="form-control" id="email" name="email"
+                                    placeholder="Correo electrónico" required>
+                            <div class="help-block" ng-messages="registerForm.email.$error" ng-if="registerForm.email.$touched">
+                                <div ng-message="required">Este campo es requerido.</div>
+                                <div ng-message="email">Correo electrónico no válido.</div>
                             </div>
-                            <div class="form-group" ng-class="{ 'has-error': registerForm.email.$touched && registerForm.email.$invalid }">
-                                <input type="email" ng-model="Access.formData.email" class="form-control" id="email" name="email"
-                                       placeholder="Correo electrónico" required>
-                                <div class="help-block" ng-messages="registerForm.email.$error" ng-if="registerForm.email.$touched">
-                                    <div ng-message="required">Este campo es requerido.</div>
-                                    <div ng-message="email">Correo electrónico no válido.</div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <div class="form-group" ng-class="{ 'has-error': registerForm.password.$touched && registerForm.password.$invalid }">
-                                        <input type="password" ng-minlength="8" ng-model="Access.formData.password" class="form-control" name="password"
-                                               placeholder="Contraseña" required="Access.formData.password2">
-                                        <div class="help-block" ng-messages="registerForm.password.$error" ng-if="registerForm.password.$touched">
-                                            <div ng-message="required">Este campo es requerido.</div>
-                                            <div ng-message="minlength">Mínimo 8 caracteres.</div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-group" ng-class="{ 'has-error': registerForm.password2.$touched && registerForm.password2.$invalid }">
-                                        <input type="password" ng-model="Access.formData.password2" class="form-control" id="password2" name="password2"
-                                               placeholder="Confirmar contraseña"
-                                               compare-to="Access.formData.password" ng-required="Access.formData.password">
-                                        <div class="help-block" ng-messages="registerForm.password2.$error" ng-if="registerForm.password2.$touched">
-                                            <div ng-message="required">Confirmar contraseña.</div>
-                                            <div ng-message="compareTo">Las contraseñas no coinciden.</div>
-                                        </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group" ng-class="{ 'has-error': registerForm.password.$touched && registerForm.password.$invalid }">
+                                    <input type="password" ng-minlength="8" ng-model="Access.formData.password" class="form-control" name="password"
+                                            placeholder="Contraseña" required="Access.formData.password2">
+                                    <div class="help-block" ng-messages="registerForm.password.$error" ng-if="registerForm.password.$touched">
+                                        <div ng-message="required">Este campo es requerido.</div>
+                                        <div ng-message="minlength">Mínimo 8 caracteres.</div>
                                     </div>
                                 </div>
                             </div>
-
-
-                            <div class="text-center" style="padding-top: 15px;">
-                                <button type="submit" class="btn btn-block btn-login-ca"
-                                        ng-disabled="registerForm.$invalid">
-                                    Regístrarme <span ng-if="Access.busy"><i
-                                        class="fa fa-spinner fa-spin"></i></span>
-                                </button>
+                            <div class="col-md-6">
+                                <div class="form-group" ng-class="{ 'has-error': registerForm.password2.$touched && registerForm.password2.$invalid }">
+                                    <input type="password" ng-model="Access.formData.password2" class="form-control" id="password2" name="password2"
+                                            placeholder="Confirmar contraseña"
+                                            compare-to="Access.formData.password" ng-required="Access.formData.password">
+                                    <div class="help-block" ng-messages="registerForm.password2.$error" ng-if="registerForm.password2.$touched">
+                                        <div ng-message="required">Confirmar contraseña.</div>
+                                        <div ng-message="compareTo">Las contraseñas no coinciden.</div>
+                                    </div>
+                                </div>
                             </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6"></div>
-                <div class="col-md-6"></div>
-            </div>
+                        </div>
+
+
+                        <div class="text-center" style="padding-top: 15px;">
+                            <button type="submit" class="btn btn-block btn-login-ca"
+                                    ng-disabled="registerForm.$invalid">
+                                Regístrarme <span ng-if="Access.busy"><i
+                                    class="fa fa-spinner fa-spin"></i></span>
+                            </button>
+                        </div>
+                    </form>
+                </uib-tab>
+            </uib-tabset>
         </div>
     </div>
 </section>
