--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -628,7 +628,8 @@ header
       p
         color catext2
         font-size 20px
-
+.label-status
+  margin-bottom 10px
 .box-prod
   background rgba(254,254,254,1);
   background -moz-linear-gradient(top, rgba(254,254,254,1) 0%, rgba(254,254,254,1) 51%, rgba(223,223,223,1) 100%);
